# manhole_detector_ros

./: CMakeLists.txt  README.md  package.xml
config/: manhole_detector.yaml  manhole_detector_eagle.yaml
include/manhole_detector/: manhole_detector.hpp
launch/: depth_image_publisher.launch  manhole_detector.launch  manhole_detector_eagle.launch
src/: depth_img_publisher.cpp  manhole_detector.cpp  manhole_detector_node.cpp
