<?xml version="1.0"?>
<package format="2">
  <name>manhole_detector</name>
  <version>0.0.0</version>
  <description>Ballast Water Tank manhole detector</description>

  <maintainer email="mihir.dharmadhikari@ntnu.no">Mihir Dharmadhikari</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>planner_msgs</depend>
  <depend>planner_common</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf_conversions</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
